--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -4,8 +4,10 @@
 }
 
 .navigation-bar {
+  position: fixed;
   width: 100%;
   padding: 2rem 10rem;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -27,7 +29,7 @@
 }
 
 .navigation-bar ul li:hover {
-    transform: translateY(-10%);
+  transform: translateY(-10%);
 }
 
 .navigation-bar ul li a {
@@ -38,187 +40,211 @@
 }
 
 .navigation-bar ul li a:hover {
-    color: #000;
+  color: #000;
 }
 
 .navigation-bar ul .sign-up a {
-    color: #fff;
-    padding: 1.2rem 3.6rem;
-    background-color: #40196D;
-    border-radius: 5px;
-    transition: all 1s;
+  color: #fff;
+  padding: 1.2rem 3.6rem;
+  background-color: #40196d;
+  border-radius: 5px;
+  transition: all 1s;
 }
 
 .navigation-bar ul .sign-up a:hover {
-    color: #fff;
-    background-color: #2b1049;
+  color: #fff;
+  background-color: #2b1049;
 }
 
 .hero-box {
-    width: 100%;
+  width: 100%;
 }
 
 .box {
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .box-1-of-2 {
-    flex-basis: 45%;
+  flex-basis: 45%;
 }
 
 .heading-main {
-    font-size: 5rem;
-    margin-top: 10rem;
-    color: #40196D;
-    font-weight: 500;
-    margin-bottom: 3rem;
+  font-size: 5rem;
+  margin-top: 20rem;
+  color: #40196d;
+  font-weight: 500;
+  margin-bottom: 3rem;
 }
 
 .heading-sub {
-    font-size: 2rem;
-    color: #F675A8;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
+  font-size: 2rem;
+  color: #f675a8;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
 }
 
 .heading-long-copy {
-    font-size: 1.5rem;
-    color: #000;
-    letter-spacing: 1px;
-    margin-bottom: 5rem;
+  font-size: 1.5rem;
+  color: #000;
+  letter-spacing: 1px;
+  margin-bottom: 5rem;
 }
 
 .heading-sub-box {
-    width: 100%;
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 5px;
-    margin-bottom: 2rem;
-    cursor: pointer;
-    transition: all 1s;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 5px;
+  margin-bottom: 2rem;
+  cursor: pointer;
+  transition: all 1s;
 }
 
 .heading-sub-box:hover {
-    transform: translateY(-5%);
+  transform: translateY(-5%);
 }
 
 .heading-sub-items {
-    width: 100%;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .heading-sub-items i {
-    font-size: 3rem;
-    color: #fff;
-    padding: 1rem;
-    background-color: #F675A8;
-    border-radius: 5px;
-    margin-right: 1rem;
+  font-size: 3rem;
+  color: #fff;
+  padding: 1rem;
+  background-color: #f675a8;
+  border-radius: 5px;
+  margin-right: 1rem;
 }
 
 .heading-sub-items h2 {
-    font-size: 1.5rem;
-    color: #000;
-    font-weight: 500;
-    letter-spacing: 1px;
+  font-size: 1.5rem;
+  color: #000;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
 .heading-icon-box i {
-    font-size: 2rem;
-    color: #000;
+  font-size: 2rem;
+  color: #000;
 }
 
 .heading-sub-box-2 {
-    width: 100%;
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    box-shadow: unset;
-    border-radius: 5px;
-    margin-bottom: 2rem;
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  box-shadow: unset;
+  border-radius: 5px;
+  margin-bottom: 2rem;
 }
 
 .heading-sub-items-2 {
-    width: 100%;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .heading-sub-items-2 i {
-    font-size: 3rem;
-    color: #fff;
-    padding: 1rem;
-    background-color: #40196D;
-    border-radius: 5px;
-    margin-right: 1rem;
+  font-size: 3rem;
+  color: #fff;
+  padding: 1rem;
+  background-color: #40196d;
+  border-radius: 5px;
+  margin-right: 1rem;
 }
 
 .heading-sub-items-2 h2 {
-    font-size: 1.5rem;
-    color: #000;
-    font-weight: 500;
-    letter-spacing: 1px;
+  font-size: 1.5rem;
+  color: #000;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
 .heading-icon-box-2 i {
-    font-size: 2rem;
-    color: #000;
-    cursor: pointer;
+  font-size: 2rem;
+  color: #000;
+  cursor: pointer;
 }
 
 .hero-image {
-    width: 100%;
-    height: 80vh;
-    background-color: #FFCCB3;
-    display: flex;
-    margin-top: 5rem;
-    border-top-left-radius: 3rem;
-    border-top-right-radius: 3rem;
+  width: 100%;
+  height: 80vh;
+  background-color: #e5f4f6;
+  display: flex;
+  margin-top: 13rem;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
 }
 
-.section-about-us {
-    width: 100%;
-    padding: 8rem 0;
+.section {
+  width: 100%;
+  padding: 8rem 0;
 }
 
 .box-con {
-    width: 70%;
-    margin: 0 auto;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .heading-secondary {
-    font-size: 3rem;
-    color: #40196D;
-    font-weight: 700;
-    margin-bottom: 1rem;
+  font-size: 3rem;
+  color: #40196d;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
 
 .heading-secondary-sub {
-    font-size: 1.5rem;
-    color: #000;
-    letter-spacing: 1px;
-    margin-bottom: 5rem;
+  font-size: 1.5rem;
+  color: #000;
+  letter-spacing: 1px;
+  margin-bottom: 5rem;
 }
 
 .box-feature {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .box-1-of-3 {
-    flex-basis: 32%;
+  flex-basis: 32%;
 }
 
 .feature-box {
-    width: 100%;
-    height: 15rem;
-    background-color: #FFCCB3;
+  width: 100%;
+  height: 15rem;
+  background-color: #e5f4f6;
+  padding: 3rem 0;
+  margin-bottom: 7rem;
+}
+
+.feature-image {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.feature-text h3 {
+    font-size: 2rem;
+    color: #000;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.feature-text i {
+    margin-right: 1rem;
+}
+
+.feature-text p {
+    font-size: 1.5rem;
+    color: #000;
+    letter-spacing: 1px;
 }
