--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -13,6 +13,7 @@
   align-items: center;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  z-index: 9;
 }
 .logo-box {
   width: 10%;
@@ -61,7 +62,7 @@
 }
 
 .box {
-  width: 70%;
+  max-width: 114rem;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -180,9 +181,15 @@
   height: 80vh;
   background-color: #e5f4f6;
   display: flex;
+  align-items: flex-end;
   margin-top: 13rem;
   border-top-left-radius: 3rem;
   border-top-right-radius: 3rem;
+}
+
+.hero-image-con {
+  width: 90%;
+  margin: 0 auto;
 }
 
 .section {
@@ -191,7 +198,7 @@
 }
 
 .box-con {
-  width: 70%;
+  max-width: 114rem;
   margin: 0 auto;
 }
 
@@ -228,23 +235,93 @@
 }
 
 .feature-image {
-    width: 50%;
-    margin: 0 auto;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .feature-text h3 {
-    font-size: 2rem;
-    color: #000;
-    font-weight: 700;
-    margin-bottom: 5px;
+  font-size: 2rem;
+  color: #000;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .feature-text i {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .feature-text p {
-    font-size: 1.5rem;
-    color: #000;
-    letter-spacing: 1px;
+  font-size: 1.5rem;
+  color: #000;
+  letter-spacing: 1px;
+}
+
+.box-works {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box-1-of-2-w {
+  flex-basis: 45%;
+}
+
+.how-it-works-image {
+  width: 100%;
+  height: 40rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  background-color: #e5f4f6;
+  border-top-right-radius: 3rem;
+  border-bottom-right-radius: 3rem;
+}
+
+.how-it-works-image-con {
+  width: 70%;
+}
+
+.how-it-works-box-con {
+  max-width: 50rem;
+}
+
+.how-it-works-box {
+  width: 100%;
+  display: flex;
+  margin-bottom: 5rem;
+}
+
+.box-1-of-3-h {
+  flex-basis: 10%;
+}
+
+.box-2-of-3-h {
+  flex-basis: 90%;
+}
+
+.how-it-works-box h1 {
+  font-size: 4rem;
+  color: #f675a8;
+  font-weight: 300;
+  display: inline-block;
+  width: 7rem;
+  height: 7rem;
+  padding: 1rem;
+  border: 2px solid #f675a8;
+  border-radius: 50%;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.how-it-works-box h3 {
+  font-size: 2rem;
+  color: #000;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.how-it-works-box p {
+  font-size: 1.5rem;
+  color: #000;
+  letter-spacing: 1px;
 }
