--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -203,7 +203,7 @@
 }
 
 .heading-secondary {
-  font-size: 3rem;
+  font-size: 3.5rem;
   color: #40196d;
   font-weight: 700;
   margin-bottom: 1rem;
@@ -324,4 +324,84 @@
   font-size: 1.5rem;
   color: #000;
   letter-spacing: 1px;
+}
+
+.box-pricing {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-1-of-3-pricing {
+    flex-basis: 32%;
+    padding: 4rem 2rem;
+    border-radius: 1rem;
+    border: 1px solid #ebebeb;
+}
+
+.box-1-of-3-pricing i {
+    font-size: 3rem;
+    color: #f675a8;
+    margin-bottom: 1rem;
+}
+
+.box-1-of-3-pricing h2 {
+    font-size: 2rem;
+    color: #000;
+    font-weight: 700;
+}
+
+.box-1-of-3-pricing p {
+    font-size: 1.5rem;
+    color: #000;
+    letter-spacing: 1px;
+    margin-bottom: 1rem;
+}
+
+.box-1-of-3-pricing h1 {
+    font-size: 4rem;
+    color: #000;
+    font-weight: 300;
+    margin-bottom: 2rem;
+}
+
+.box-1-of-3-pricing span {
+    font-size: 1.5rem;
+    color: #000;
+    letter-spacing: 1px;
+}
+
+.box-1-of-3-pricing button {
+    width: 100%;
+    font-size: 1.5rem;
+    color: #fff;
+    font-weight: 300;
+    padding: 1.5rem;
+    background-color: #40196d;
+    border: none;
+    border-radius: 3rem;
+    cursor: pointer;
+    margin-bottom: 3rem;
+    transition: all 1s;
+}
+
+.box-1-of-3-pricing button:hover {
+    background-color: #2b1049;
+}
+
+.box-1-of-3-pricing ul {
+    list-style: none;
+}
+
+.box-1-of-3-pricing ul li {
+    font-size: 1.5rem;
+    color: #000;
+    letter-spacing: 1px;
+    margin-bottom: 1rem;
+}
+
+.box-1-of-3-pricing ul li i {
+    font-size: 1.5rem;
+    color: #f675a8;
+    margin-right: 1rem;
 }
