--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -406,3 +406,82 @@
     color: #f675a8;
     margin-right: 1rem;
 }
+
+.footer {
+    width: 100%;
+    padding: 8rem 10rem;
+    background-color: #40196d;
+}
+
+.logo-footer-box {
+    width: 4%;
+    margin-bottom: 2rem;
+}
+
+.box-footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-1-of-4-footer {
+    flex-basis: 25%;
+}
+
+.box-1-of-4-footer h2 {
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+}
+
+.box-1-of-4-footer .long-copy {
+    font-size: 1.5rem;
+    color: #fff;
+    font-weight: 100;
+    letter-spacing: 1px;
+    margin-bottom: 4rem;
+}
+
+.box-1-of-4-footer .copyright {
+    font-size: 1.3rem;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.box-1-of-4-footer h3 {
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+}
+
+.box-1-of-4-footer ul {
+    list-style: none;
+}
+
+.box-1-of-4-footer ul li {
+    margin-bottom: 1rem;
+}
+
+.box-1-of-4-footer ul li a {
+    font-size: 1.5rem;
+    color: #b7b7b7;
+    font-weight: 300;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: all 1s;
+}
+
+.box-1-of-4-footer ul li a:hover {
+    color: #fff;
+}
+
+
+
+
+
