--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,15 @@ html {
 body {
   font-family: 'Roboto';
 }
+
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 62.50%;
+  }
+}
